--- a/README
+++ b/README
@@ -6,3 +6,4 @@ Portanto, seu trabalho como Data Scientist é responder as seguinte perguntas:
 Quais casas o CEO da House Rocket deveria comprar e por qual preço de compra?
 Uma vez a casa em posse da empresa, qual o melhor momento para vendê-las e qual seria o preço da venda?
 A House Rocket deveria fazer uma reforma para aumentar o preço da venda? Quais seriam as sugestões de mudanças? Qual o incremento no preço dado por cada opção de reforma?
+<a href ="https://www.kaggle.com/harlfoxem/housesalesprediction">"Link da base de dados"</a>
